force-app/main/default/objects/Initiative_Need__c/Initiative_Need__c.object-meta.xml
<CustomObject>
    <label>施策ニーズ紐付け</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>紐付け番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>施策ニーズ紐付け</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>