force-app/main/default/objects/Initiative_Need__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <label>製品施策</label>
    <type>MasterDetail</type>
    <referenceTo>Product_Initiative__c</referenceTo>
    <relationshipLabel>紐付けニーズ</relationshipLabel>
    <relationshipName>Initiative_Needs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>