force-app/main/default/objects/Initiative_Need__c/fields/Needs_Card__c.field-meta.xml
<CustomField>
    <fullName>Needs_Card__c</fullName>
    <label>ニーズカード</label>
    <type>Lookup</type>
    <referenceTo>Needs_Card__c</referenceTo>
    <relationshipLabel>紐付け施策</relationshipLabel>
    <relationshipName>Initiative_Needs</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>