force-app/main/default/objects/Initiative_Need__c/fields/Relevance_Note__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Note__c</fullName>
    <label>関連理由</label>
    <type>Text</type>
    <length>255</length>
</CustomField>